--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
-    "mongoose": "~3.6.13"
+    "mongoose": "~4.0.6",
+    "mongod": "~1.3.0",
+    "mongodb": "~2.0.35"
   }
 }
